Adjustments to warnings and the change of Camunda Modeler opener method to eliminate the warnings and to modernize the API.